deployment_files_examples/jenkins-sa-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  namespace: jenkins
